--- a/PyBer.ipynb
+++ b/PyBer.ipynb
@@ -2029,6 +2029,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fares by City Type"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 93,
    "metadata": {},
@@ -2069,7 +2076,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## "
+   ]
   }
  ],
  "metadata": {
