--- a/PyBer_Challenge.ipynb
+++ b/PyBer_Challenge.ipynb
@@ -490,35 +490,35 @@
      "data": {
       "text/html": [
        "<style  type=\"text/css\" >\n",
-       "</style><table id=\"T_390c382e_63dc_11eb_9ffc_9061aebff616\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Total Rides</th>        <th class=\"col_heading level0 col1\" >Total Drivers</th>        <th class=\"col_heading level0 col2\" >Total Fares</th>        <th class=\"col_heading level0 col3\" >Average Fare per Ride</th>        <th class=\"col_heading level0 col4\" >Average Fare per Driver</th>    </tr></thead><tbody>\n",
+       "</style><table id=\"T_0633fde9_63dd_11eb_8b8a_9061aebff616\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Total Rides</th>        <th class=\"col_heading level0 col1\" >Total Drivers</th>        <th class=\"col_heading level0 col2\" >Total Fares</th>        <th class=\"col_heading level0 col3\" >Average Fare per Ride</th>        <th class=\"col_heading level0 col4\" >Average Fare per Driver</th>    </tr></thead><tbody>\n",
        "                <tr>\n",
-       "                        <th id=\"T_390c382e_63dc_11eb_9ffc_9061aebff616level0_row0\" class=\"row_heading level0 row0\" >Rural</th>\n",
-       "                        <td id=\"T_390c382e_63dc_11eb_9ffc_9061aebff616row0_col0\" class=\"data row0 col0\" >125</td>\n",
-       "                        <td id=\"T_390c382e_63dc_11eb_9ffc_9061aebff616row0_col1\" class=\"data row0 col1\" >78</td>\n",
-       "                        <td id=\"T_390c382e_63dc_11eb_9ffc_9061aebff616row0_col2\" class=\"data row0 col2\" >$4,327.93</td>\n",
-       "                        <td id=\"T_390c382e_63dc_11eb_9ffc_9061aebff616row0_col3\" class=\"data row0 col3\" >$34.62</td>\n",
-       "                        <td id=\"T_390c382e_63dc_11eb_9ffc_9061aebff616row0_col4\" class=\"data row0 col4\" >$55.49</td>\n",
+       "                        <th id=\"T_0633fde9_63dd_11eb_8b8a_9061aebff616level0_row0\" class=\"row_heading level0 row0\" >Rural</th>\n",
+       "                        <td id=\"T_0633fde9_63dd_11eb_8b8a_9061aebff616row0_col0\" class=\"data row0 col0\" >125</td>\n",
+       "                        <td id=\"T_0633fde9_63dd_11eb_8b8a_9061aebff616row0_col1\" class=\"data row0 col1\" >78</td>\n",
+       "                        <td id=\"T_0633fde9_63dd_11eb_8b8a_9061aebff616row0_col2\" class=\"data row0 col2\" >$4,327.93</td>\n",
+       "                        <td id=\"T_0633fde9_63dd_11eb_8b8a_9061aebff616row0_col3\" class=\"data row0 col3\" >$34.62</td>\n",
+       "                        <td id=\"T_0633fde9_63dd_11eb_8b8a_9061aebff616row0_col4\" class=\"data row0 col4\" >$55.49</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_390c382e_63dc_11eb_9ffc_9061aebff616level0_row1\" class=\"row_heading level0 row1\" >Suburban</th>\n",
-       "                        <td id=\"T_390c382e_63dc_11eb_9ffc_9061aebff616row1_col0\" class=\"data row1 col0\" >625</td>\n",
-       "                        <td id=\"T_390c382e_63dc_11eb_9ffc_9061aebff616row1_col1\" class=\"data row1 col1\" >490</td>\n",
-       "                        <td id=\"T_390c382e_63dc_11eb_9ffc_9061aebff616row1_col2\" class=\"data row1 col2\" >$19,356.33</td>\n",
-       "                        <td id=\"T_390c382e_63dc_11eb_9ffc_9061aebff616row1_col3\" class=\"data row1 col3\" >$30.97</td>\n",
-       "                        <td id=\"T_390c382e_63dc_11eb_9ffc_9061aebff616row1_col4\" class=\"data row1 col4\" >$39.50</td>\n",
+       "                        <th id=\"T_0633fde9_63dd_11eb_8b8a_9061aebff616level0_row1\" class=\"row_heading level0 row1\" >Suburban</th>\n",
+       "                        <td id=\"T_0633fde9_63dd_11eb_8b8a_9061aebff616row1_col0\" class=\"data row1 col0\" >625</td>\n",
+       "                        <td id=\"T_0633fde9_63dd_11eb_8b8a_9061aebff616row1_col1\" class=\"data row1 col1\" >490</td>\n",
+       "                        <td id=\"T_0633fde9_63dd_11eb_8b8a_9061aebff616row1_col2\" class=\"data row1 col2\" >$19,356.33</td>\n",
+       "                        <td id=\"T_0633fde9_63dd_11eb_8b8a_9061aebff616row1_col3\" class=\"data row1 col3\" >$30.97</td>\n",
+       "                        <td id=\"T_0633fde9_63dd_11eb_8b8a_9061aebff616row1_col4\" class=\"data row1 col4\" >$39.50</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_390c382e_63dc_11eb_9ffc_9061aebff616level0_row2\" class=\"row_heading level0 row2\" >Urban</th>\n",
-       "                        <td id=\"T_390c382e_63dc_11eb_9ffc_9061aebff616row2_col0\" class=\"data row2 col0\" >1,625</td>\n",
-       "                        <td id=\"T_390c382e_63dc_11eb_9ffc_9061aebff616row2_col1\" class=\"data row2 col1\" >2,405</td>\n",
-       "                        <td id=\"T_390c382e_63dc_11eb_9ffc_9061aebff616row2_col2\" class=\"data row2 col2\" >$39,854.38</td>\n",
-       "                        <td id=\"T_390c382e_63dc_11eb_9ffc_9061aebff616row2_col3\" class=\"data row2 col3\" >$24.53</td>\n",
-       "                        <td id=\"T_390c382e_63dc_11eb_9ffc_9061aebff616row2_col4\" class=\"data row2 col4\" >$16.57</td>\n",
+       "                        <th id=\"T_0633fde9_63dd_11eb_8b8a_9061aebff616level0_row2\" class=\"row_heading level0 row2\" >Urban</th>\n",
+       "                        <td id=\"T_0633fde9_63dd_11eb_8b8a_9061aebff616row2_col0\" class=\"data row2 col0\" >1,625</td>\n",
+       "                        <td id=\"T_0633fde9_63dd_11eb_8b8a_9061aebff616row2_col1\" class=\"data row2 col1\" >2,405</td>\n",
+       "                        <td id=\"T_0633fde9_63dd_11eb_8b8a_9061aebff616row2_col2\" class=\"data row2 col2\" >$39,854.38</td>\n",
+       "                        <td id=\"T_0633fde9_63dd_11eb_8b8a_9061aebff616row2_col3\" class=\"data row2 col3\" >$24.53</td>\n",
+       "                        <td id=\"T_0633fde9_63dd_11eb_8b8a_9061aebff616row2_col4\" class=\"data row2 col4\" >$16.57</td>\n",
        "            </tr>\n",
        "    </tbody></table>"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x1ddbac83430>"
+       "<pandas.io.formats.style.Styler at 0x1f7e5af4550>"
       ]
      },
      "execution_count": 10,
@@ -1167,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1183,9 +1183,7 @@
    ],
    "source": [
     "# 8. Using the object-oriented interface method, plot the resample DataFrame using the df.plot() function. \n",
-    "\n",
-    "# Import the style from Matplotlib.\n",
-    "from matplotlib import style\n",
+    "# style from matplotlib imported in cell 1\n",
     "\n",
     "# Use the graph style fivethirtyeight.\n",
     "style.use('fivethirtyeight')\n",
