--- a/PyBer_Challenge.ipynb
+++ b/PyBer_Challenge.ipynb
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +482,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +612,7 @@
        "Urban                   16.571468  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +701,7 @@
        "Urban                   16.571468  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -714,45 +714,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style  type=\"text/css\" >\n",
-       "</style><table id=\"T_6aaa691c_641b_11eb_92cc_9061aebff616\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Total Rides</th>        <th class=\"col_heading level0 col1\" >Total Drivers</th>        <th class=\"col_heading level0 col2\" >Total Fares</th>        <th class=\"col_heading level0 col3\" >Average Fare per Ride</th>        <th class=\"col_heading level0 col4\" >Average Fare per Driver</th>    </tr></thead><tbody>\n",
+       "</style><table id=\"T_d7bc8272_6424_11eb_91b3_9061aebff616\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Total Rides</th>        <th class=\"col_heading level0 col1\" >Total Drivers</th>        <th class=\"col_heading level0 col2\" >Total Fares</th>        <th class=\"col_heading level0 col3\" >Average Fare per Ride</th>        <th class=\"col_heading level0 col4\" >Average Fare per Driver</th>    </tr></thead><tbody>\n",
        "                <tr>\n",
-       "                        <th id=\"T_6aaa691c_641b_11eb_92cc_9061aebff616level0_row0\" class=\"row_heading level0 row0\" >Rural</th>\n",
-       "                        <td id=\"T_6aaa691c_641b_11eb_92cc_9061aebff616row0_col0\" class=\"data row0 col0\" >125</td>\n",
-       "                        <td id=\"T_6aaa691c_641b_11eb_92cc_9061aebff616row0_col1\" class=\"data row0 col1\" >78</td>\n",
-       "                        <td id=\"T_6aaa691c_641b_11eb_92cc_9061aebff616row0_col2\" class=\"data row0 col2\" >$4,327.93</td>\n",
-       "                        <td id=\"T_6aaa691c_641b_11eb_92cc_9061aebff616row0_col3\" class=\"data row0 col3\" >$34.62</td>\n",
-       "                        <td id=\"T_6aaa691c_641b_11eb_92cc_9061aebff616row0_col4\" class=\"data row0 col4\" >$55.49</td>\n",
+       "                        <th id=\"T_d7bc8272_6424_11eb_91b3_9061aebff616level0_row0\" class=\"row_heading level0 row0\" >Rural</th>\n",
+       "                        <td id=\"T_d7bc8272_6424_11eb_91b3_9061aebff616row0_col0\" class=\"data row0 col0\" >125</td>\n",
+       "                        <td id=\"T_d7bc8272_6424_11eb_91b3_9061aebff616row0_col1\" class=\"data row0 col1\" >78</td>\n",
+       "                        <td id=\"T_d7bc8272_6424_11eb_91b3_9061aebff616row0_col2\" class=\"data row0 col2\" >$4,327.93</td>\n",
+       "                        <td id=\"T_d7bc8272_6424_11eb_91b3_9061aebff616row0_col3\" class=\"data row0 col3\" >$34.62</td>\n",
+       "                        <td id=\"T_d7bc8272_6424_11eb_91b3_9061aebff616row0_col4\" class=\"data row0 col4\" >$55.49</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_6aaa691c_641b_11eb_92cc_9061aebff616level0_row1\" class=\"row_heading level0 row1\" >Suburban</th>\n",
-       "                        <td id=\"T_6aaa691c_641b_11eb_92cc_9061aebff616row1_col0\" class=\"data row1 col0\" >625</td>\n",
-       "                        <td id=\"T_6aaa691c_641b_11eb_92cc_9061aebff616row1_col1\" class=\"data row1 col1\" >490</td>\n",
-       "                        <td id=\"T_6aaa691c_641b_11eb_92cc_9061aebff616row1_col2\" class=\"data row1 col2\" >$19,356.33</td>\n",
-       "                        <td id=\"T_6aaa691c_641b_11eb_92cc_9061aebff616row1_col3\" class=\"data row1 col3\" >$30.97</td>\n",
-       "                        <td id=\"T_6aaa691c_641b_11eb_92cc_9061aebff616row1_col4\" class=\"data row1 col4\" >$39.50</td>\n",
+       "                        <th id=\"T_d7bc8272_6424_11eb_91b3_9061aebff616level0_row1\" class=\"row_heading level0 row1\" >Suburban</th>\n",
+       "                        <td id=\"T_d7bc8272_6424_11eb_91b3_9061aebff616row1_col0\" class=\"data row1 col0\" >625</td>\n",
+       "                        <td id=\"T_d7bc8272_6424_11eb_91b3_9061aebff616row1_col1\" class=\"data row1 col1\" >490</td>\n",
+       "                        <td id=\"T_d7bc8272_6424_11eb_91b3_9061aebff616row1_col2\" class=\"data row1 col2\" >$19,356.33</td>\n",
+       "                        <td id=\"T_d7bc8272_6424_11eb_91b3_9061aebff616row1_col3\" class=\"data row1 col3\" >$30.97</td>\n",
+       "                        <td id=\"T_d7bc8272_6424_11eb_91b3_9061aebff616row1_col4\" class=\"data row1 col4\" >$39.50</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_6aaa691c_641b_11eb_92cc_9061aebff616level0_row2\" class=\"row_heading level0 row2\" >Urban</th>\n",
-       "                        <td id=\"T_6aaa691c_641b_11eb_92cc_9061aebff616row2_col0\" class=\"data row2 col0\" >1,625</td>\n",
-       "                        <td id=\"T_6aaa691c_641b_11eb_92cc_9061aebff616row2_col1\" class=\"data row2 col1\" >2,405</td>\n",
-       "                        <td id=\"T_6aaa691c_641b_11eb_92cc_9061aebff616row2_col2\" class=\"data row2 col2\" >$39,854.38</td>\n",
-       "                        <td id=\"T_6aaa691c_641b_11eb_92cc_9061aebff616row2_col3\" class=\"data row2 col3\" >$24.53</td>\n",
-       "                        <td id=\"T_6aaa691c_641b_11eb_92cc_9061aebff616row2_col4\" class=\"data row2 col4\" >$16.57</td>\n",
+       "                        <th id=\"T_d7bc8272_6424_11eb_91b3_9061aebff616level0_row2\" class=\"row_heading level0 row2\" >Urban</th>\n",
+       "                        <td id=\"T_d7bc8272_6424_11eb_91b3_9061aebff616row2_col0\" class=\"data row2 col0\" >1,625</td>\n",
+       "                        <td id=\"T_d7bc8272_6424_11eb_91b3_9061aebff616row2_col1\" class=\"data row2 col1\" >2,405</td>\n",
+       "                        <td id=\"T_d7bc8272_6424_11eb_91b3_9061aebff616row2_col2\" class=\"data row2 col2\" >$39,854.38</td>\n",
+       "                        <td id=\"T_d7bc8272_6424_11eb_91b3_9061aebff616row2_col3\" class=\"data row2 col3\" >$24.53</td>\n",
+       "                        <td id=\"T_d7bc8272_6424_11eb_91b3_9061aebff616row2_col4\" class=\"data row2 col4\" >$16.57</td>\n",
        "            </tr>\n",
        "    </tbody></table>"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x1a4953f53d0>"
+       "<pandas.io.formats.style.Styler at 0x259c64e6820>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -875,7 +875,7 @@
        "4            46  Urban  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -956,7 +956,7 @@
        "      2019-01-06 07:38:40  47.33"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -970,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1043,7 +1043,7 @@
        "4  Rural  2019-01-06 07:38:40  47.33"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1053,100 +1053,6 @@
     "# df = df.reset_index()\n",
     "index_reset_df = type_date_df.reset_index()\n",
     "index_reset_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th>type</th>\n",
-       "      <th>Rural</th>\n",
-       "      <th>Suburban</th>\n",
-       "      <th>Urban</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2019-01-01 00:08:16</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>37.91</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-01-01 00:46:46</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>47.74</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-01-01 02:07:24</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>24.07</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-01-01 03:46:50</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>7.57</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-01-01 05:23:21</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>10.75</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "type                 Rural  Suburban  Urban\n",
-       "date                                       \n",
-       "2019-01-01 00:08:16    NaN       NaN  37.91\n",
-       "2019-01-01 00:46:46    NaN     47.74    NaN\n",
-       "2019-01-01 02:07:24    NaN     24.07    NaN\n",
-       "2019-01-01 03:46:50    NaN       NaN   7.57\n",
-       "2019-01-01 05:23:21    NaN       NaN  10.75"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 4. Create a pivot table with the 'date' as the index, the columns ='type', and values='fare' \n",
-    "# to get the total fares for each type of city by the date. \n",
-    "pivot_table = index_reset_df.pivot(index=\"date\", columns = \"type\", values = \"fare\")\n",
-    "pivot_table.head()"
    ]
   },
   {
@@ -1237,6 +1143,100 @@
     }
    ],
    "source": [
+    "# 4. Create a pivot table with the 'date' as the index, the columns ='type', and values='fare' \n",
+    "# to get the total fares for each type of city by the date. \n",
+    "pivot_table = index_reset_df.pivot(index=\"date\", columns = \"type\", values = \"fare\")\n",
+    "pivot_table.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>type</th>\n",
+       "      <th>Rural</th>\n",
+       "      <th>Suburban</th>\n",
+       "      <th>Urban</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2019-01-01 00:08:16</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>37.91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-01 00:46:46</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>47.74</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-01 02:07:24</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>24.07</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-01 03:46:50</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7.57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-01 05:23:21</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10.75</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "type                 Rural  Suburban  Urban\n",
+       "date                                       \n",
+       "2019-01-01 00:08:16    NaN       NaN  37.91\n",
+       "2019-01-01 00:46:46    NaN     47.74    NaN\n",
+       "2019-01-01 02:07:24    NaN     24.07    NaN\n",
+       "2019-01-01 03:46:50    NaN       NaN   7.57\n",
+       "2019-01-01 05:23:21    NaN       NaN  10.75"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "# 5. Create a new DataFrame from the pivot table DataFrame using loc on the given dates, '2019-01-01':'2019-04-29'.\n",
     "data_by_date_df = pivot_table.loc['2019-01-01':'2019-04-29']\n",
     "data_by_date_df.head()"
@@ -1244,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1264,7 +1264,7 @@
        "              dtype='datetime64[ns]', name='date', length=2196, freq=None)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1278,7 +1278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1305,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1385,7 +1385,7 @@
        "2019-02-03  333.08   1042.79  2086.94"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1398,7 +1398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
